ci, refactoring
